public/less/community-create.less
/* ... */
.community-creation-slug-input-wrapper {
  .secondary-input-spacing-top();

  position: relative;
  display: flex;
  align-items: baseline;
  // aligning to baseline makes the whole thing a bit taller so just shrink this down to explicit height
  height: @secondary-input-height;
  margin-bottom: @secondary-input-spacing-bottom;

  &:after {
    position: absolute;
    right: 0;

    content: '';
    font-family: 'fontello';

    transition: color .2s ease;
  }

  &.pending {
    &:after {
      content: '\e80b';
    }
  }
  &.available {
    &:after {
      content: '\e804';
    }
  }
  &.unavailable {
    &:after {
      content: '\e825';
      color: @ruby;
    }
  }
}

.community-creation-slug-input-prefix {
  margin-right: 0.5rem;
  font-weight: 300;
}

.community-creation-slug-input {
  .secondary-bare-input();
  flex: 1;
}

.community-creation-slug-input-icon {

}


.community-create-associated-project-section {
  .community-create-associated-project-section-height(0, @main-view-extra-spacing-top-at-small-breakpoint);
  padding-top: @org-item-height;
}

.community-create-associated-project-copy {
  display: none;
  margin: 0;

  color: @subdued-text-color;

  &.active {
    display: block;
  }
}

.community-create-has-associated-project-copy {
  .community-create-associated-project-copy();

  &.active {
    display: flex;
    align-items: baseline;
  }
}

.community-create-associated-project-main-area {
  flex: 1;
}

.community-create-associated-project-badger-option {
  display: none;

  &.active {
    display: block;
  }
}

.community-create-associated-project-badger-option-input {
  margin-right: .5rem;
}

.community-create-change-github-project-button {
  padding: 0;
}



.community-creation-sub-room-input-wrapper {
  display: flex;
  align-items: baseline;
}

.community-creation-sub-room-input-prefix {
  margin-right: .75em;
}

.community-creation-sub-room-input {
  .secondary-bare-input();
  .secondary-input-spacing-top();

  flex: 1;
  margin-bottom: @secondary-input-spacing-bottom;
}

.community-creation-sub-room-submit-button {
  padding: .5em;

  background-color: transparent;
  border: 0;

  color: inherit;
  font-size: inherit;
}




.community-create-advanced-options-button-wrapper {
  display: flex;
  justify-content: flex-end;
}

.community-create-advanced-options-button {
  .secondary-community-create-button();
  padding-right: 0;
}

.community-create-advanced-options-section {
  visibility: hidden;
  max-height: 0;

    transition:
      visibility 0s ease .2s,
      max-height .2s ease;

  &.active {
    visibility: visible;
    max-height: 999px;

    transition:
      visibility 0s ease 0s,
      max-height .2s ease;
  }
}


.community-create-github-projects-tabbed-wrapper {
  overflow: hidden;
  position: relative;
}

.community-create-github-projects-tabbed-navigation-list {
  .primary-tabbed-navigation-list();
  .primary-input-spacing-top();
  margin-bottom: @primary-input-spacing-bottom;
}

.community-create-github-projects-tab-content-area {
  position: absolute;
  visibility: hidden;
  opacity: 0;
  pointer-events: none;

  transition:
    visibility 0s ease .2s,
    opacity .2s ease;

  &.active {
    position: relative;
    visibility: visible;
    opacity: 1;
    .community-create-step-wrapper & {
      pointer-events: none;
    }
    .community-create-step-wrapper.active & {
      pointer-events: auto;
    }

    transition:
      visibility 0s ease 0s,
      opacity .2s ease;
  }
}

.community-create-github-project-list-wrapper {
  overflow: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;

  &::-webkit-scrollbar-thumb {
    background-color: rgba(255, 255, 255, .2);
  }
  &:hover::-webkit-scrollbar-thumb {
    background-color: rgba(255, 255, 255, .4);
  }
}

.community-create-github-project-list() {
  display: flex;
  flex-wrap: wrap;

  margin-top: 0;
  margin-left: 0;
  margin-bottom: 0;
  padding-left: 0;
  list-style: none;
}

.loop-github-projects-list-item-max-width(@num-columns) when (@num-columns > 1) {
  // next iteration
  .loop-github-projects-list-item-max-width(@num-columns - 1);

  // Only when we can fit the appropriate number of items in (see flex-basis)
  @breakpoint-width: ((@org-area-inner-width / @num-columns) * (@num-columns - 1));
  @media (min-width: @breakpoint-width) {
    max-width: 100% / @num-columns;
  }
}

.community-create-github-project-list-item(@item-spacing) {
  @border-width: 2px;
  @vertical-padding-calc-value: (@item-spacing / 2) ~"-" @border-width;

  overflow: hidden;
  flex-grow: 1;
  // This will ensure we can have at max 2 items
  flex-basis: (@org-area-inner-width / (@number-github-projects-per-row + 1)) + 1;
  display: block;
  .loop-github-projects-list-item-max-width(@number-github-projects-per-row);

  margin-top: calc(@vertical-padding-calc-value);
  margin-bottom: calc(@vertical-padding-calc-value);

  border: @border-width solid transparent;

  transition: border-color .2s ease;

  &.active {
    background-color: rgba(255, 255, 255, .08);
    border: 2px solid fade(@ruby, 60%);
  }
}

.community-create-list-item-link {
  overflow: hidden;
  display: block;

  color: @base-text-color;
  white-space: nowrap;
  text-overflow: ellipsis;
  line-height: 1;

  transition:
    background-color .2s ease;

  &:hover {
    background-color: rgba(255, 255, 255, .075);
    text-decoration: none;
  }
  &:focus {
    background-color: rgba(255, 255, 255, .1);
    outline: none;
  }
}

.community-create-list-item-name {
}


.community-create-org-list-root {
  .secondary-input-spacing-top();

  height: @org-area-total-height + @org-area-padding;
  //margin-top: @secondary-input-height + @secondary-input-spacing-top + @secondary-input-spacing-bottom;
  padding: (@org-area-padding - (@org-item-spacing / 2)) @org-area-padding;

  background-color: @list-area-background-color;
}
.community-create-org-list-root-inner {
  height: 100%;
}
/* ... */

